feat: Society entity redesign, Subscription entity, AWS S3 config, Razorpay config, PlatformRole, enums for production SaaS